--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1,5 +1,5 @@
 SERVER_APP_BASE_URL=https://api.apidog.com
 ORGANIZATION_ID=348485
 RUNNER_ID=11677
-ACCESS_TOKEN=OSHGR-_wx8Agj3hEg0a0nh2axUS1L3-iWub60R
+ACCESS_TOKEN=
 TZ=Africa/Lagos
