--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -1,4 +1,4 @@
-name: "Chromatic UI Tests"
+name: "Chromatic Visual Tests"
 
 on:
   push:
@@ -7,20 +7,53 @@ on:
   pull_request:
 
 jobs:
-  chromatic-deployment:
+  chromatic-storybook:
+    name: "Chromatic Storybook"
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Setup Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
           node-version: 18
 
       - name: Install dependencies
         run: npm install
 
-      - name: Publish to Chromatic
-        run: npx chromatic --project-token=${{ secrets.CHROMATIC_PROJECT_TOKEN }} --exit-zero-on-changes
+      - name: Run Chromatic Storybook
+        run: |
+          if [ "${{ github.ref_name }}" = "main" ]; then
+            npx chromatic --project-token=chpt_8722db30209cbcf --auto-accept-changes
+          else
+            npx chromatic --project-token=chpt_8722db30209cbcf
+          fi
+
+  chromatic-playwright:
+    name: "Chromatic Playwright"
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Install Playwright browsers
+        run: npx playwright install --with-deps
+
+      - name: Run Chromatic Playwright
+        run: |
+          if [ "${{ github.ref_name }}" = "main" ]; then
+            npx chromatic --playwright --project-token=chpt_8722db30209cbcf --auto-accept-changes
+          else
+            npx chromatic --playwright --project-token=chpt_8722db30209cbcf
+          fi
