--- a/.github/deploy-netlify.yml
+++ b/.github/deploy-netlify.yml
@@ -8,9 +8,25 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - uses: nwtgck/actions-netlify@v2
+      - name: 📥 Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: 🧰 Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+          cache: 'npm'
+
+      - name: 📦 Install Dependencies
+        run: npm ci
+
+      - name: ⚙️ Build Next.js (Static Export)
+        run: npm run build && npm run export
+
+      - name: 🚀 Deploy to Netlify
+        uses: nwtgck/actions-netlify@v2
         with:
           publish-dir: './out'
           production-branch: main
@@ -18,3 +34,5 @@ jobs:
           deploy-message: "Deploy CHONKPUMP 9000 portal"
           netlify-auth-token: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           netlify-site-id: ${{ secrets.NETLIFY_SITE_ID }}
+        env:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
